--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.application.name=zoo-service
 server.port=8100
 
-eureka.client.serviceUrl.defaultZone=http://zoo-naming-server:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://naming-server:8761/eureka
 
 spring.sleuth.sampler.probability=1.0
 
